# cxx-snippets

./: .clang-format  cpp.code-workspace
book_cxx/: CMakeLists.txt  vcpkg.json
book_cxx/chapter1/: CMakeLists.txt  extern.h  main.cc  obj.cc  std.cc
book_cxx/chapter2/: CMakeLists.txt  class.cc  test.cc
book_cxx/chapter3/: CMakeLists.txt
test/: CMakeLists.txt  exception.cpp  fmt.cpp  functor.cpp  lambda.cpp  oo.cc  pmr.cpp  str.cpp  test.cpp  trash.cpp
test/module/: calculate.cpp
